# videojuegos_ws

./: CMakeLists.txt
src/: main.cpp
src/mycomp/: entity.hpp
src/myman/: entitymanager.cpp  entitymanager.hpp
src/mysys/: render.cpp  render.hpp
src/myutil/: gamecontext.hpp  typealiases.hpp
